# inventory-app

./: .actrc  .dockerignore  .env.ci  .env.example  .env.local.example  .env.testing  .gitignore  .gitmodules  .prettierignore  .secrets.example  .stylelintrc.json  ANALYSIS_REPORT.md  API_PERMISSION_IMPLEMENTATION.md  CHANGELOG.md  CLAUDE.md  DEPLOYMENT_STATUS_ISSUE_509.md  Dockerfile.testing  EXPORTER_NPM_PUBLISH_IMPLEMENTATION.md  FINAL_IMPLEMENTATION_SUMMARY_ISSUE_509.md  GITHUB_PAGES_SINGLE_TRIGGER_FIX.md  IMPLEMENTATION_COMPLETE_ISSUE_509.md  LAYOUT_MODERNIZATION_QUICK_REFERENCE.md  LAYOUT_MODERNIZATION_TESTING_GUIDE.md  Makefile  README.md  README_ISSUE_509.md  REQUEST_STATE.md  REVIEW.md  _config.yml  add-jekyll-frontmatter.ps1  api.json  composer.json  docker-compose.prod.yml  docker-compose.yml  eslint.config.js  index.md  openapitools.json  package-lock.json  package.json  phpstan.neon.dist  (+11 more)
docs/: .copilot-instructions.md  2025-06-22-github-page.md  Gemfile  README-pip-tools.md  README-poetry.md  README.md  _config.yml  api-documentation.md  api-models.md  api.json  api.json.md  archive.md  concepts.md  contributing.md  deployment-architecture.md  deployment-quick-start.md  deployment.md  development-archive.md  generate-client-docs.py  generate-commit-docs.py  index.md  inventory-model-core-concepts.md  legacy-data-import.md  pyproject.toml  readme.md  requirements.in  requirements.txt  swagger-ui.html  swagger-ui.md  testing.md  trusted-proxies.md
docs/_includes/: footer.html  head.html  header.html
docs/_layouts/: default.html  home.html  post.html
(+4362 files in other folders)
